--- a/src/style/css/Page3.css
+++ b/src/style/css/Page3.css
@@ -1,6 +1,6 @@
 .page-3 {
-  background-color: #D2DBDD;
-  border: solid green;
+  background-color: #ffffff;
+  border: solid;
   position: relative;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
