--- a/src/style/scss/Page3.scss
+++ b/src/style/scss/Page3.scss
@@ -2,8 +2,8 @@
 @import './functions';
 
 .page-3 {
-    background-color: #D2DBDD;
-    border: solid green;
+    background-color: #ffffff;
+    border: solid;
     position: relative;
     display: inline-flex;
     justify-content: center;
