--- a/src/style/css/Page1.css
+++ b/src/style/css/Page1.css
@@ -2,20 +2,49 @@
   position: relative;
   background-color: #fff;
   width: 100%;
-  min-height: 100vh;
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: max-content 40% max-content;
-      grid-template-rows: -webkit-max-content 40% -webkit-max-content;
-      grid-template-rows: max-content 40% max-content;
+  -ms-grid-rows: max-content max-content max-content 40% max-content;
+      grid-template-rows: -webkit-max-content -webkit-max-content -webkit-max-content 40% -webkit-max-content;
+      grid-template-rows: max-content max-content max-content 40% max-content;
   overflow-x: hidden;
+  height: 100vh;
+}
+
+.page-1 .page-title-grouping {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+}
+
+.page-1 .page-title-grouping .page-title {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 600;
+  font-size: 2.5rem;
+  text-transform: uppercase;
+  color: #252934;
+}
+
+.page-1 .page-title-grouping .underline-page-title {
+  background: #252934;
+  height: 4px;
+  width: 70px;
 }
 
 .page-1 .top-container-page-1 {
   position: relative;
-  -ms-grid-row: 1;
-      grid-row-start: 1;
-  grid-row-end: 2;
+  -ms-grid-row: 3;
+      grid-row-start: 3;
+  grid-row-end: 4;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -59,9 +88,9 @@
 
 .page-1 .middle-container-page-1 {
   position: relative;
-  -ms-grid-row: 2;
-      grid-row-start: 2;
-  grid-row-end: 3;
+  -ms-grid-row: 4;
+      grid-row-start: 4;
+  grid-row-end: 5;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -99,8 +128,8 @@
 
 .page-1 .bottom-container-page-1 {
   position: relative;
-  -ms-grid-row: 3;
-      grid-row-start: 3;
+  -ms-grid-row: 5;
+      grid-row-start: 5;
   padding-top: 1em;
   display: -webkit-box;
   display: -ms-flexbox;
