--- a/src/style/scss/Page2.scss
+++ b/src/style/scss/Page2.scss
@@ -5,13 +5,36 @@
     position: relative;
     background-color: #fff;
     width: 100%;
-    min-height: 100vh;
     display: flex;
     flex-direction: column;
-    height: 150vh;
-    .project-card-page-2{
+    align-items: center;
+    height: 200vh;
+    .page-title-grouping {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 0.5em;
+        margin-bottom: 0.5em;
+        .page-title {
+            font-family: 'Raleway', sans-serif;
+            font-weight: 600;
+            font-size: 2.5rem;
+            text-transform: uppercase;
+            color: #252934;
+        }
+        .underline-page-title {
+            background: #252934;
+            height: 4px;
+            width: 70px;
+        }
+    }
+    .project-card-page-2 {
         position: relative;
-        margin-bottom: 3vh;
+        width: 100%;
+        height: 35vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         .c {
             position: absolute;
             display: flex;
@@ -19,11 +42,8 @@
             justify-content: center;
             background-size: cover;
             background-position: center;
-            height: 35vh;
-            width: 90vw;
-            margin-left: 5vw;
-            margin-top: 5%;
-            margin-bottom: 5%;
+            height: 92%;
+            width: 90%;
             border-radius: 12px;
             box-shadow: 5px 6px 10px 3px rgba(0, 0, 0,0.1);
         }
@@ -54,19 +74,16 @@
         }
     }
     #ml {
-        top: 0;
         .projects-container-front {
             background-image: url(../../Images/NeuralNetwork.jpg);
         }
     }
     #todo {
-        top: 35vh;
         .projects-container-front {
             background-image: url(../../Images/todo.jpg);
         }
     }
     #project-3 {
-        top: 70vh;
         .projects-container-front {
             background-image: url(../../Images/MarsRover.jpg);
         }
