--- a/src/style/scss/Page3.scss
+++ b/src/style/scss/Page3.scss
@@ -2,34 +2,38 @@
 @import './functions';
 
 .page-3 {
-    background-color: #ffffff;
-    border: solid;
+    background-color: #252934;
     position: relative;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
+    display: flex;
+    flex-direction: column;
     width: 100%;
-    height: 100vh;
+    height: 40vh;
     overflow: hidden;
-    .swipe-card {
-        background-color: #ffffff;
-        position: absolute;
-        width: 50%;
-        height: 40%;
-        will-change: transform;
+    .page-title-grouping {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 2.5em;
+        margin-bottom: 0.5em;
+        .page-title {
+            font-family: 'Raleway', sans-serif;
+            font-weight: 600;
+            font-size: 2.5rem;
+            text-transform: uppercase;
+            color: #ffffff;
+        }
+        .underline-page-title {
+            background: #ffffff;
+            height: 4px;
+            width: 70px;
+        }
+    }
+    .social-icons-container {
+        display: inline-flex;
+        justify-content: space-evenly;
+        margin-top: 20px;
+        width: 55%;
+        padding: 2%;
         border-radius: 12px;
-        box-shadow: 0px 13px 10px -7px rgba(0, 0, 0,0.1);
-        .swipe-card-image {
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-position: center center;
-            margin-top: 1.5em;
-            height: 75%;
-            width: 100%;
-        }
-        .swipe-card-title {
-            font-size: fontSize(projectTitleBack);
-            font-weight: fontWeight(projectTitleBack);
-        }
     }
 }
