responsive design changes

--- a/src/style/css/Page1.css
+++ b/src/style/css/Page1.css
@@ -9,6 +9,7 @@
       grid-template-rows: max-content max-content max-content 40% max-content;
   overflow-x: hidden;
   height: 100vh;
+  padding-bottom: 10vh;
 }
 
 .page-1 .page-title-grouping {
@@ -29,7 +30,7 @@
 .page-1 .page-title-grouping .page-title {
   font-family: 'Raleway', sans-serif;
   font-weight: 600;
-  font-size: 2.5rem;
+  font-size: 2rem;
   text-transform: uppercase;
   color: #252934;
 }
@@ -103,8 +104,8 @@
   position: relative;
   background-color: #ffffff;
   position: absolute;
-  width: 50%;
   height: 100%;
+  width: 160px;
   will-change: transform;
   border-radius: 12px;
   -webkit-box-shadow: 5px 6px 10px 3px rgba(0, 0, 0, 0.1);
@@ -117,7 +118,7 @@
   background-repeat: no-repeat;
   background-position: center center;
   margin-top: 1.5em;
-  height: 75%;
+  height: 70%;
   width: 100%;
 }
 
@@ -137,6 +138,7 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  margin-top: 0.5rem;
 }
 
 .page-1 .bottom-container-page-1 .down-page-button {
