--- a/src/style/css/Page1.css
+++ b/src/style/css/Page1.css
@@ -98,15 +98,14 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  height: 90%;
 }
 
 .page-1 .middle-container-page-1 .swipe-card {
-  position: relative;
   background-color: #ffffff;
   position: absolute;
   height: 100%;
-  width: 160px;
-  will-change: transform;
+  width: 150px;
   border-radius: 12px;
   -webkit-box-shadow: 5px 6px 10px 3px rgba(0, 0, 0, 0.1);
           box-shadow: 5px 6px 10px 3px rgba(0, 0, 0, 0.1);
@@ -131,14 +130,12 @@
   position: relative;
   -ms-grid-row: 5;
       grid-row-start: 5;
-  padding-top: 1em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-top: 0.5rem;
 }
 
 .page-1 .bottom-container-page-1 .down-page-button {
