--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -307,8 +307,6 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background-size: cover;
-  background-position: center;
   height: 92%;
   width: 90%;
   border-radius: 12px;
@@ -316,16 +314,34 @@
           box-shadow: 5px 6px 10px 3px rgba(0, 0, 0, 0.1);
 }
 
+.page-2 .project-card-page-2 .projects-container-front {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
 .page-2 .project-card-page-2 .projects-container-front .project-title-front {
   position: relative;
-  margin-bottom: 20%;
-  opacity: 1;
-  background-color: black;
-  color: white;
-  font-size: 2rem;
-  font-weight: 700;
+  color: #F24E4E;
+  font-size: 1.4rem;
+  font-weight: 600;
   text-transform: uppercase;
-  mix-blend-mode: overlay;
+  height: 20%;
+}
+
+.page-2 .project-card-page-2 .projects-container-front .project-image-front {
+  position: relative;
+  height: auto;
+  width: 80%;
 }
 
 .page-2 .project-card-page-2 .projects-container-back {
@@ -341,18 +357,6 @@
 .page-2 .project-card-page-2 .projects-container-back .project-languages {
   font-size: 0.8rem;
   color: #F24E4E;
-}
-
-.page-2 #ml .projects-container-front {
-  background-image: url(../../Images/NeuralNetwork.jpg);
-}
-
-.page-2 #todo .projects-container-front {
-  background-image: url(../../Images/todo.jpg);
-}
-
-.page-2 #project-3 .projects-container-front {
-  background-image: url(../../Images/MarsRover.jpg);
 }
 
 .page-3 {
