--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -325,17 +325,30 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   -o-object-fit: contain;
      object-fit: contain;
 }
 
 .page-2 .project-card-page-2 .projects-container-front .project-title-front {
   position: relative;
-  color: #F24E4E;
+  color: #252934;
   font-size: 1.4rem;
   font-weight: 600;
   text-transform: uppercase;
+  width: 100%;
   height: 20%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .page-2 .project-card-page-2 .projects-container-front .project-image-front {
