--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -222,14 +222,19 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            justify-content: flex-end;
             object-fit: contain;
             .project-title-front {
                 position: relative;
-                color: #F24E4E; 
+                color: #252934;
                 font-size: fontSize(projectTitleFront);
                 font-weight: fontWeight(projectTitleFront);
                 text-transform: uppercase;
+                width: 100%;
                 height: 20%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
             }
             .project-image-front {
                 position: relative;
