--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -248,7 +248,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 120vh;
+  height: 155vh;
 }
 
 .page-2 .page-title-grouping {
@@ -335,7 +335,7 @@
 .page-2 .project-card-page-2 .projects-container-front .project-title-front {
   position: relative;
   color: #252934;
-  font-size: 1.4rem;
+  font-size: 1.1rem;
   font-weight: 600;
   text-transform: uppercase;
   width: 100%;
@@ -353,8 +353,8 @@
 
 .page-2 .project-card-page-2 .projects-container-front .project-image-front {
   position: relative;
-  height: auto;
-  width: 80%;
+  height: 80%;
+  width: auto;
 }
 
 .page-2 .project-card-page-2 .projects-container-back {
