--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -240,6 +240,8 @@
                 position: relative;
                 height: 80%;
                 width: auto;
+                max-width: 100%;
+                border: solid;
             }
         }
         .projects-container-back {
