--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -1,4 +1,5 @@
 .intro-page {
+  position: relative;
   background-color: #252934;
   width: 100%;
   height: 100vh;
@@ -67,14 +68,17 @@
   position: relative;
   background-color: #fff;
   width: 100%;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-rows: max-content max-content max-content 40% max-content;
-      grid-template-rows: -webkit-max-content -webkit-max-content -webkit-max-content 40% -webkit-max-content;
-      grid-template-rows: max-content max-content max-content 40% max-content;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   overflow-x: hidden;
-  height: 100vh;
-  padding-bottom: 10vh;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
 }
 
 .page-1 .page-title-grouping {
@@ -88,8 +92,9 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
 }
 
 .page-1 .page-title-grouping .page-title {
@@ -108,18 +113,28 @@
 
 .page-1 .top-container-page-1 {
   position: relative;
-  -ms-grid-row: 3;
-      grid-row-start: 3;
-  grid-row-end: 4;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   padding: 4%;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
 }
 
 .page-1 .top-container-page-1 .top-left-container-page-1 {
   width: 30%;
   margin-right: 4%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
 }
 
 .page-1 .top-container-page-1 .top-left-container-page-1 .my-photo {
@@ -127,6 +142,30 @@
   border-radius: 50%;
   -webkit-box-shadow: 5px 6px 10px 3px rgba(0, 0, 0, 0.1);
           box-shadow: 5px 6px 10px 3px rgba(0, 0, 0, 0.1);
+}
+
+.page-1 .top-container-page-1 .top-left-container-page-1 .navigation-button-container {
+  margin-top: 1rem;
+}
+
+.page-1 .top-container-page-1 .top-left-container-page-1 .navigation-button-container .navigation-button {
+  margin-top: 0.3rem;
+  color: white;
+  background-color: #f24e4e;
+  font-weight: 500;
+  border-radius: 1.625rem;
+  height: 1.8rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 0.15rem;
+  padding-bottom: 0.15rem;
 }
 
 .page-1 .top-container-page-1 .top-right-container-page-1 {
@@ -154,16 +193,15 @@
 
 .page-1 .middle-container-page-1 {
   position: relative;
-  -ms-grid-row: 4;
-      grid-row-start: 4;
-  grid-row-end: 5;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  height: 90%;
+  height: 225px;
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
   padding-top: 1rem;
 }
 
@@ -200,38 +238,6 @@
 .page-1 .middle-container-page-1 .swipe-card .swipe-card-title {
   font-size: 1.4rem;
   font-weight: 500;
-}
-
-.page-1 .bottom-container-page-1 {
-  position: relative;
-  -ms-grid-row: 5;
-      grid-row-start: 5;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.page-1 .bottom-container-page-1 .down-page-button {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.page-1 .bottom-container-page-1 .down-page-button .text-to-next-page {
-  font-family: 'Raleway', sans-serif;
-  font-size: 1rem;
-  font-weight: 500;
-  text-transform: uppercase;
 }
 
 .page-2 {
