--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -9,6 +9,7 @@
 }
 
 .intro-page {
+    position: relative;
     background-color: #252934;
     width: 100%;
     height: 100vh;
@@ -64,17 +65,15 @@
     position: relative;
     background-color: #fff;
     width: 100%;
-    display: grid;
-    grid-template-rows: max-content max-content max-content 40% max-content;
+    display: flex;
+    flex-direction: column;
     overflow-x: hidden;
-    height: 100vh;
-    padding-bottom: 10vh;
+    height: max-content;
     .page-title-grouping {
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-top: 0.5em;
-        margin-bottom: 0.5em;
+        height: max-content;
         .page-title {
             font-family: 'Raleway', sans-serif;
             font-weight: 600;
@@ -90,17 +89,35 @@
     }
     .top-container-page-1 {
         position: relative;
-        grid-row-start: 3;
-        grid-row-end: 4;
         display: flex;
         padding: 4%;
+        height: max-content;
         .top-left-container-page-1 {
             width: 30%;
             margin-right: 4%;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
             .my-photo {
                 width: 100%;
                 border-radius: 50%;
                 box-shadow: 5px 6px 10px 3px rgba(0, 0, 0,0.1);
+            }
+            .navigation-button-container{
+                margin-top: 1rem;
+                .navigation-button {
+                    margin-top: 0.3rem;
+                    color: white;
+                    background-color: #f24e4e;
+                    font-weight: 500;
+                    border-radius: 1.625rem;
+                    height: 1.8rem;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    padding-top: 0.15rem;
+                    padding-bottom: 0.15rem;
+                }
             }
         }
         .top-right-container-page-1 {
@@ -125,11 +142,11 @@
     }
     .middle-container-page-1{
         position: relative;
-        grid-row-start: 4;
-        grid-row-end: 5;
         display: flex;
         justify-content: center;
-        height: 90%;
+        height: 225px;
+        margin-top: 2.5rem;
+        margin-bottom: 2.5rem;
         padding-top: 1rem;
         .swipe-card {
             background-color: #ffffff;
@@ -153,23 +170,6 @@
             .swipe-card-title {
                 font-size: fontSize(projectTitleBack);
                 font-weight: fontWeight(projectTitleBack);
-            }
-        }
-    }
-    .bottom-container-page-1 {
-        position: relative;
-        grid-row-start: 5;
-        display: flex;
-        justify-content: center;
-        .down-page-button{
-            width: fit-content;
-            display: flex;
-            flex-direction: column;
-            .text-to-next-page {
-                font-family: 'Raleway', sans-serif;
-                font-size: 1rem;
-                font-weight: 500;
-                text-transform: uppercase;
             }
         }
     }
