--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -35,6 +35,7 @@
             position: absolute;
             bottom: 0%;
             width: 100%;
+            margin-bottom: 3rem;
             .intro-button {
                 position: relative;
                 font-family: 'Raleway', sans-serif;
