Button position intro page X2

--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -22,7 +22,7 @@
         right: 10%;
         .profile-paragraph {
             font-family: 'Raleway', sans-serif;
-            margin-top: 7.5em;
+            margin-top: 8rem;
             line-height: 120%;
             font-size: fontSize(title);
             color: #BFC0C0;
@@ -35,7 +35,7 @@
             position: absolute;
             bottom: 0%;
             width: 100%;
-            margin-bottom: 3rem;
+            margin-bottom: 5rem;
             .intro-button {
                 position: relative;
                 font-family: 'Raleway', sans-serif;
