--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -16,7 +16,7 @@
 
 .intro-page .intro-container .profile-paragraph {
   font-family: 'Raleway', sans-serif;
-  margin-top: 7.5em;
+  margin-top: 8rem;
   line-height: 120%;
   font-size: 1.8rem;
   color: #BFC0C0;
@@ -31,7 +31,7 @@
   position: absolute;
   bottom: 0%;
   width: 100%;
-  margin-bottom: 3rem;
+  margin-bottom: 5rem;
 }
 
 .intro-page .intro-container .intro-button-container .intro-button {
