--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -153,6 +153,32 @@
   padding: 7.5%;
 }
 
+.page-1 .top-container-page-1 .top-left-container-page-1 .navigation-button-container .navigation-container-title-grouping {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 0.75rem;
+  font-size: 1.15rem;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.page-1 .top-container-page-1 .top-left-container-page-1 .navigation-button-container .navigation-container-title-grouping .underline-navigation {
+  background: #252934;
+  height: 2px;
+  width: 60px;
+}
+
 .page-1 .top-container-page-1 .top-left-container-page-1 .navigation-button-container .navigation-button {
   margin-top: 0.5rem;
   color: white;
