Page 1 min heigh 100vh

--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -70,6 +70,7 @@
     flex-direction: column;
     overflow-x: hidden;
     height: max-content;
+    min-height: 100vh;
     .page-title-grouping {
         display: flex;
         flex-direction: column;
