--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -80,6 +80,7 @@
   height: -webkit-max-content;
   height: -moz-max-content;
   height: max-content;
+  min-height: 100vh;
 }
 
 .page-1 .page-title-grouping {
