--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -283,6 +283,7 @@
             .project-information-container {
                 overflow-y: scroll;
                 width: 95%;
+                height: 25vh;
                 .project-information-text {
                     padding-left: 10%;
                     padding-right: 10%;
