--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -335,7 +335,7 @@
 }
 
 .page-2 .project-card-page-2 .c {
-  position: absolute;
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -346,7 +346,7 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  height: 92%;
+  height: 215px;
   width: 90%;
   border-radius: 12px;
   -webkit-box-shadow: 5px 6px 10px 3px rgba(0, 0, 0, 0.1);
@@ -354,21 +354,13 @@
 }
 
 .page-2 .project-card-page-2 .projects-container-front {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  position: absolute;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
-  -o-object-fit: contain;
-     object-fit: contain;
 }
 
 .page-2 .project-card-page-2 .projects-container-front .project-title-front {
@@ -399,13 +391,7 @@
 
 .page-2 .project-card-page-2 .projects-container-back {
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  z-index: 999;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: start;
@@ -438,8 +424,8 @@
 }
 
 .page-3 {
-  background-color: #252934;
   position: relative;
+  background-color: #252934;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
