--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -203,6 +203,12 @@
     flex-direction: column;
     align-items: center;
     height: 155vh;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
     .page-title-grouping {
         display: flex;
         flex-direction: column;
