--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -287,7 +287,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 155vh;
+  height: 1050px;
 }
 
 .page-2 .page-title-grouping {
@@ -322,7 +322,7 @@
 .page-2 .project-card-page-2 {
   position: relative;
   width: 100%;
-  height: 35vh;
+  padding: 0.8rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -349,8 +349,8 @@
   height: 215px;
   width: 90%;
   border-radius: 12px;
-  -webkit-box-shadow: 5px 6px 10px 3px rgba(0, 0, 0, 0.1);
-          box-shadow: 5px 6px 10px 3px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 4px 7px 13px 3px rgba(0, 0, 0, 0.1);
+          box-shadow: 4px 7px 13px 3px rgba(0, 0, 0, 0.1);
 }
 
 .page-2 .project-card-page-2 .projects-container-front {
@@ -432,6 +432,7 @@
 
 .page-2 .project-card-page-2 .projects-container-back .project-information-container {
   overflow-y: scroll;
+  -webkit-appearance: none;
   width: 95%;
   height: 25vh;
 }
