--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -202,7 +202,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 155vh;
+    height: 1050px;
     .page-title-grouping {
         display: flex;
         flex-direction: column;
@@ -225,7 +225,7 @@
     .project-card-page-2 {
         position: relative;
         width: 100%;
-        height: 35vh;
+        padding: 0.8rem;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -237,7 +237,7 @@
             height: 215px;
             width: 90%;
             border-radius: 12px;
-            box-shadow: 5px 6px 10px 3px rgba(0, 0, 0,0.1);
+            box-shadow: 4px 7px 13px 3px rgba(0, 0, 0,0.1);
         }
         .projects-container-front {
             position: absolute;
@@ -292,6 +292,7 @@
             }
             .project-information-container {
                 overflow-y: scroll;
+                -webkit-appearance: none;
                 width: 95%;
                 height: 25vh;  
                 .project-information-text {
