--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -363,6 +363,12 @@
           justify-content: flex-end;
 }
 
+.page-2 .project-card-page-2 .projects-container-front .project-languages {
+  font-size: 0.8rem;
+  color: #F24E4E;
+  height: 10%;
+}
+
 .page-2 .project-card-page-2 .projects-container-front .project-title-front {
   position: relative;
   color: #252934;
@@ -370,7 +376,6 @@
   font-weight: 600;
   text-transform: uppercase;
   width: 100%;
-  height: 20%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -380,6 +385,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  height: 10%;
 }
 
 .page-2 .project-card-page-2 .projects-container-front .project-image-front {
@@ -409,7 +415,7 @@
 
 .page-2 .project-card-page-2 .projects-container-back {
   position: relative;
-  z-index: 999;
+  z-index: 998;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: start;
@@ -418,28 +424,19 @@
           align-items: center;
 }
 
-.page-2 .project-card-page-2 .projects-container-back .project-title {
-  font-size: 1.1rem;
-  font-weight: 500;
-  text-transform: uppercase;
-  margin-top: 1rem;
-}
-
-.page-2 .project-card-page-2 .projects-container-back .project-languages {
-  font-size: 0.8rem;
-  color: #F24E4E;
-}
-
 .page-2 .project-card-page-2 .projects-container-back .project-information-container {
   overflow-y: scroll;
   -webkit-appearance: none;
   width: 95%;
-  height: 25vh;
+  height: 100%;
 }
 
 .page-2 .project-card-page-2 .projects-container-back .project-information-container .project-information-text {
-  padding-left: 10%;
-  padding-right: 10%;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  text-align: unset;
 }
 
 .page-3 {
