--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -242,7 +242,13 @@
         .projects-container-front {
             position: absolute;
             align-items: center;
-            justify-content: flex-end;      
+            justify-content: flex-end;
+            .project-languages {
+                font-size: 0.8rem;
+                color: #F24E4E;
+
+                height: 10%;
+            }   
             .project-title-front {
                 position: relative;
                 color: #252934;
@@ -250,10 +256,10 @@
                 font-weight: fontWeight(projectTitleFront);
                 text-transform: uppercase;
                 width: 100%;
-                height: 20%;
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                height: 10%;
             }
             .project-image-front {
                 position: relative;
@@ -277,27 +283,20 @@
         }
         .projects-container-back {
             position: relative;
-            z-index: 999;
+            z-index: 998;
             justify-content: start;
             align-items: center;
-            .project-title {
-                font-size: fontSize(projectTitleBack);
-                font-weight: fontWeight(projectTitleBack);
-                text-transform: uppercase;
-                margin-top: 1rem;
-            }
-            .project-languages {
-                font-size: 0.8rem;
-                color: #F24E4E;
-            }
             .project-information-container {
                 overflow-y: scroll;
                 -webkit-appearance: none;
                 width: 95%;
-                height: 25vh;  
+                height: 100%;  
                 .project-information-text {
-                    padding-left: 10%;
-                    padding-right: 10%;
+                    padding-top: 1rem;
+                    padding-bottom: 1rem;
+                    padding-left: 2rem;
+                    padding-right: 2rem;
+                    text-align: unset;
                 }
             }
         }
