--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -70,7 +70,6 @@
     flex-direction: column;
     overflow-x: hidden;
     height: max-content;
-    min-height: 100vh;
     .page-title-grouping {
         display: flex;
         flex-direction: column;
@@ -92,10 +91,12 @@
     .top-container-page-1 {
         position: relative;
         display: flex;
+        justify-content: space-between;
         padding: 4%;
         height: max-content;
         .top-left-container-page-1 {
             width: 30%;
+            max-width: 150px;
             margin-right: 4%;
             display: flex;
             flex-direction: column;
@@ -143,15 +144,14 @@
         }
         .top-right-container-page-1 {
             width: 70%;
+            height: max-content;
             font-family: 'Raleway', sans-serif;
             color: #252934;
             text-align: left;
             padding: 3.73%;
             transition: all .4s cubic-bezier(0.175, 0.885, 0, 1);
             border-radius: 12px;
-            overflow: hidden;
             box-shadow: 5px 6px 10px 3px rgba(0, 0, 0,0.1);
-            line-height: 1rem;
             font-size: 2rem;
             .quotation-marks {
                 white-space: nowrap;
@@ -287,7 +287,6 @@
             align-items: center;
             .project-information-container {
                 overflow-y: scroll;
-                -webkit-appearance: none;
                 width: 95%;
                 height: 100%;  
                 .project-information-text {
